--- a/Wspolnota_MVC/Wspolnota_MVC/Views/Home/Index.cshtml
+++ b/Wspolnota_MVC/Wspolnota_MVC/Views/Home/Index.cshtml
@@ -1,10 +1,19 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
-    <div class="text-center">
-        <h1 class="display-4">Welcome</h1>
-        <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-        <br />
-        <h1>Api <a href="UsersControler">Sprawdź User Client Api</a>.</h1>
-    </div>
+<div class="text-center">
+    <h1 class="display-4">Welcome</h1>
+    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <br />
+    <h1>Api <a href="UsersControler">Sprawdź User Client Api</a>.</h1>
+    @if (SignInManager.IsSignedIn(User))
+    {
+        <h1>Api <a href="UsersControler">Sprawdź User Client Api Dla zalogowanych</a>.</h1>
+    }
+
+</div>
