--- a/Wspolnota_MVC/Wspolnota_MVC/Views/UsersControler/Edit.cshtml
+++ b/Wspolnota_MVC/Wspolnota_MVC/Views/UsersControler/Edit.cshtml
@@ -57,9 +57,9 @@
                     <input class="form-check-input" asp-for="Active" /> @Html.DisplayNameFor(model => model.Active)
                 </label>
             </div>
-            @*<div class="form-group">
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
-            </div>*@
+            </div>
         </form>
     </div>
 </div>
